--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,5 @@
   lslog = log --oneline --decorate --graph
 [push]
 	default = simple
-[http]
-	proxy = http://127.0.0.1:8065
-[https]
-	proxy = https://127.0.0.1:8065
+[credential]
+	helper = store
