--- a/.myshrc
+++ b/.myshrc
@@ -2,9 +2,12 @@ if [ ! -f '$HOME/myshrc.local.sh' ];then
   touch $HOME/.myshrc.local
 fi
 source $HOME/.myshrc.local
-export PATH=$PATH:~/anaconda3/bin
+#export PATH=$PATH:~/anaconda3/bin
 
-# -----------alias-----------
+# oh-my-zsh plugins
+plugins=(git)
+
+# --------------------alias-----------------------
 alias ll='ls -alF'
 alias la='ls -A'
 alias l='ls -CF'
@@ -12,12 +15,13 @@ alias pls='sudo'
 alias fortune='fortune | lolcat'
 #alias rm='rm -i'
 alias __create_esp_project='source ~/bin/_E_create_esp_project_E_'
-alias gogh='wget -O gogh https://git.io/vQgMr && chmod +x gogh && ./gogh && rm gogh'
+alias gogh='wget -O gogh https://git.io/vQgMr && chmod +x gogh && ./gogh'
 alias _matlab="matlab -nodesktop -nojvm"
 alias leelaz='~/program_files/leela-zero/build/leelaz'
 alias leelaz_='~/program_files/leela-zero/build/leelaz -w ~/program_files/leela-zero/build/best-network --cpu-only --gtp --noponder -t 4 -p 1'
 
-alias __install_my_tools=InstallMyTools
+alias vim='~/bin/nvim.appimage'
+
 
 # ------------------------------------------------
 ### Here are some interesting command tools.
@@ -60,30 +64,44 @@ alias __install_my_tools=InstallMyTools
 
 
 # -----------------FUNCTION-----------------------
-function InstallMyTools() {
+function __install_my_tools() {
 
   CheckInstalled dialog
   CheckInstalled curl
 
-  #┌───────────────────────────────────┐
-  #│ download nvim and install plugins │
-  #└───────────────────────────────────┘
-  ## download with the following commands
-  #curl -fLo ~/nvim.appimage https://github.com/neovim/neovim/releases/download/nightly/nvim.appimage
-  #chmod u+x ~/nvim.appimage
-
-  if [ ! -f ~/.config/nvim/init.vim ];then
-    if [ ! -d ~/.config/nvim ];then
-      mkdir ~/.config/nvim
+  dialog --checklist "Install some common softwares" 0 0 5 \
+    "nvim" "get newest NVIM nightly(unstable) and put it in ~/bin" off \
+    "setup_nvim" "create init.vim; get the plug.vim installed; get all plugins installed" off \
+    2> /tmp/dialogtmp
+  if [ $? -eq 0 ];then
+    if [ -n "$(grep -w "nvim" /tmp/dialogtmp)" ];then
+      #┌───────────────────────────────────┐
+      #│ download nvim and install plugins │
+      #└───────────────────────────────────┘
+      curl -fLo ~/nvim.appimage https://github.com/neovim/neovim/releases/download/nightly/nvim.appimage
+      chmod u+x ~/nvim.appimage && mv ~/nvim.appimage ~/bin
     fi
-    echo "set runtimepath^=~/.vim runtimepath+=~/.vim/after\n\
-      let &packpath = &runtimepath\nsource ~/.vim/.vimrc" > ~/.config/nvim/init.vim
-    echo "~/.config/nvim/init.vim created"
-    curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
-      https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-    vim +PlugInstall +q +q
-    echo "\033[33mplug.vim\033[0m installed"
+    if [ -n "$(grep -w "setup_nvim" /tmp/dialogtmp)" ];then
+      if [ ! -f ~/.config/nvim/init.vim ];then
+        if [ ! -d ~/.config/nvim ];then
+          mkdir ~/.config/nvim
+        fi
+        if [ ! -d ~/.vim ];then
+          mkdir -p ~/.vim/autoload
+        fi
+        echo "set runtimepath^=~/.vim runtimepath+=~/.vim/after\n\
+          let &packpath = &runtimepath\nsource ~/.vim/.vimrc" > ~/.config/nvim/init.vim
+        echo "~/.config/nvim/init.vim created"
+        curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
+          https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+        vim +PlugInstall +q +q
+        echo "\033[33mplug.vim\033[0m installed"
+      else
+        echo "\033[33mplug.vim\033[0m already installed; you can install plugins manually"
+      fi
+    fi
   fi
+
 
   # Appearance
   CheckInstalled redshift ; CheckInstalled feh
@@ -93,11 +111,10 @@ function InstallMyTools() {
 
   # C++
 
-
 }
 
-function CheckInstalled() {
-  if [ ! -n "$(dpkg -s $1 2> /dev/null)" ];then
+CheckInstalled() {
+  if [ -z "$(dpkg -s $1 2> /dev/null)" ];then
     sudo apt install $1
   fi
 }
