a lot of bspwrc changes, change to fish

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,9 @@
 !.config/sxhkd
 !.config/zathura
 
-!compton.conf
+!/.config/fish
+/.config/fish/*
+!/.config/fish/config.fish
+!/.config/fish/functions/*
+
+!.compton.conf
