--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 [core]
   editor = nvim
 [alias]
-  lslog = log --oneline --decorate --graph
+    lslog = log --decorate --graph --date=relative
 [push]
 	default = simple
 [credential]
