--- a/.compton.conf
+++ b/.compton.conf
@@ -7,7 +7,7 @@ no-dock-shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 15;
+#shadow-radius = 15;
 # The left offset for shadows. (default -15)
 #shadow-offset-x = -18;
 # The top offset for shadows. (default -15)
@@ -31,10 +31,10 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 12;
+#fade-delta = 12;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.05;
-fade-out-step = 0.05;
+#fade-in-step = 0.05;
+#fade-out-step = 0.05;
 
 # Specify a list of conditions of windows that should not be faded.
 fade-exclude = [ ];
