--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 [core]
   editor = nvim
 [alias]
-    lslog = log --decorate --graph --date=relative
+  lslog = log --graph --oneline --decorate
 [push]
 	default = simple
 [credential]
