--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,17 @@
 
 !/.config
 /.config/*
-!.config/bspwm
-!.config/sxhkd
-!.config/zathura
+!/.config/bspwm
+!/.config/sxhkd
+!/.config/zathura
 
-!/.config/fish
+!/.config/fish/
 /.config/fish/*
 !/.config/fish/config.fish
-!/.config/fish/functions/*
+!/.config/fish/functions/
+
+!/.config/nvim/
+/.config/nvim/*
+!/.config/nvim/init.lua
+!/.config/nvim/lua/
+!/.config/nvim/autoload/
