Restart using tmux; default tabstop is changed to 4; use wsl clipboard setting

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
   navigate = true  # use n and N to move between diff sections
   side-by-side = true
   line-numbers = true
-  syntax-theme = Solarized (light)
+  syntax-theme = Solarized (dark)
 [merge]
   conflictstyle = diff3
 [diff]
